# chat

./: .gitignore  Procfile  pyproject.toml
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_chat_name.py
chat/templates/chat/: chats.html
chat/templates/chat/partials/: message.html  online-indicator.html  users-list.html
core/: asgi.py  settings.py  urls.py
static/css/: local.css
static/js/: local.js
staticfiles/js/: tailwind.min.js
templates/: base.html
