[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.7",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]
